Your commit message

--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,8 @@
         .container {
             margin: 30px;
             width: 500px;
-            height: 650px;
-            background-color:bisque;
+            height: 670px;
+            background-color: rgb(116, 212, 219);
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -46,7 +46,7 @@
         <h2>EXP 1 : EC2</h2>
         <h1>Welcome to My profile</h1>
         <img src="/profile.jpg" alt="profile" width="300px">
-        <h1>Danish Hazrat Ali Shaikh</h1>
+        <h1>Sarjina Shaikh</h1>
         <button type="submit"><a href="/skills">View My Skills</a></button>
     </div>
 </body>
