--- a/views/skills.html
+++ b/views/skills.html
@@ -21,7 +21,7 @@
             padding: 30px;
             width: 400px;
             height: 350px;
-            background-color: bisque;
+            background-color: rgb(116, 212, 219);
             border-radius: 20px;
         }
 
@@ -43,17 +43,17 @@
     <div class="container">
         <h1>Skills</h1>
         <ul>
-            <li>Programming Languages: C, Java</li>
+            <li>Programming Languages: C Programming</li>
             <li>Development: HTML5, CSS3, JavaScript</li>
             <li>Libraries & Frameworks: React.js, Tailwind CSS, Bootstrap</li>
-            <li>Others: Communication, Debugging</li>
+            <li>Others: Communication</li>
         </ul>
 
         <h1>Hobbies</h1>
         <ul>
             <li>Exploring new technologies</li>
-            <li>Competitive programming & debugging</li>
-            <li>Playing Cricket</li>
+            <li>Eating Food</li>
+            <li>Listening Music</li>
         </ul>
 
         <button type="button"><a href="/">Go back to Profile</a></button>
