--- a/views/skills.html
+++ b/views/skills.html
@@ -43,10 +43,11 @@
     <div class="container">
         <h1>Skills</h1>
         <ul>
-            <li>Programming Languages: C Programming</li>
-            <li>Development: HTML5, CSS3, JavaScript</li>
-            <li>Libraries & Frameworks: React.js, Tailwind CSS, Bootstrap</li>
-            <li>Others: Communication</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>C++</li>
+            <li>C programmingli>
         </ul>
 
         <h1>Hobbies</h1>
