--- a/views/skills.html
+++ b/views/skills.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Skills</title>
+    <title>DS | Skills & Hobbies</title>
     <style>
         body {
             height: 100%;
