--- a/views/skills.html
+++ b/views/skills.html
@@ -43,18 +43,17 @@
     <div class="container">
         <h1>Skills</h1>
         <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>C++</li>
-            <li>C programmingli>
+            <li>Programming Languages: C, Java</li>
+            <li>Development: HTML5, CSS3, JavaScript</li>
+            <li>Libraries & Frameworks : React.js, TailwindCSS, Bootstrap</li>
+            <li>Others: Communication, Debugging<li>
         </ul>
 
         <h1>Hobbies</h1>
         <ul>
             <li>Exploring new technologies</li>
-            <li>Eating Food</li>
-            <li>Listening Music</li>
+            <li>Competitive programming & debugging</li>
+            <li>Playing Cricket</li>
         </ul>
 
         <button type="button"><a href="/">Go back to Profile</a></button>
