--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
         <h2>EXP 1 : EC2</h2>
         <h1>Welcome to My profile</h1>
         <img src="/profile.jpg" alt="profile" width="300px">
-        <h1>Sarjina Shaikh</h1>
+        <h1>Danish Shaikh</h1>
         <button type="submit"><a href="/skills">View My Skills</a></button>
     </div>
 </body>
