--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
             margin: 30px;
             width: 500px;
             height: 670px;
-            background-color: rgb(116, 212, 219);
+            background-color: bisque;
             text-align: center;
             display: flex;
             flex-direction: column;
