--- a/views/skills.html
+++ b/views/skills.html
@@ -20,8 +20,8 @@
             margin: 50px;
             padding: 30px;
             width: 400px;
-            height: 350px;
-            background-color: rgb(116, 212, 219);
+            height: 380px;
+            background-color: bisque;
             border-radius: 20px;
         }
 
