--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>EXP 1 : EC2</h2>
+        <h2>Elastic Beanstalk</h2>
         <h1>Welcome to My profile</h1>
         <img src="/profile.jpg" alt="profile" width="300px">
         <h1>Danish Shaikh</h1>
