--- a/views/index.html
+++ b/views/index.html
@@ -43,10 +43,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>Elastic Beanstalk</h2>
+        <h2>EC2</h2>
         <h1>Welcome to My profile</h1>
         <img src="/profile.jpg" alt="profile" width="300px">
-        <h1>Danish Shaikh</h1>
+        <h1>Shaurya Vishwakarma</h1>
         <button type="submit"><a href="/skills">View My Skills</a></button>
     </div>
 </body>
