--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DS | Profile</title>
+    <title>VB| Profile</title>
     <style>
         body {
             height: 100%;
@@ -43,10 +43,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>Elastic Beanstalk</h2>
+        <h2>EC2</h2>
         <h1>Welcome to My profile</h1>
         <img src="/profile.jpg" alt="profile" width="300px">
-        <h1>Shaurya Vishwakarma</h1>
+        <h1>Vrushabh Bhagat</h1>
         <button type="submit"><a href="/skills">View My Skills</a></button>
     </div>
 </body>
